Camera atualiza status quando desliga sozinha
